friends: fix the scrollbar selector

--- a/discord.user.styl
+++ b/discord.user.styl
@@ -1077,7 +1077,7 @@
           }
         }
         /// Scrollbars.
-        + [class *= 'scrollbar-'] {
+        [class *= 'scrollbar-'] {
           &, [class *= 'pad-'] { c: 0 0 bg }
           [class *= 'track-'] { c: 0 bg bd }
         }
